--- a/admin-dashboard/users.html
+++ b/admin-dashboard/users.html
@@ -791,7 +791,6 @@
 
                 document.querySelector(".pagination-info").textContent = `Showing data ${start + 1} to ${end} of ${totalRecords} entries`;
 
-                console.log(paginatedData);
                 renderPagination(totalRecords, pageSize, page);
 
                 tableBody.innerHTML = "";
@@ -899,7 +898,6 @@
                                 'id': deleteFacilityId
                             }
                         }).then((res) => {
-                            console.log(res.data);
                             getData(1)
                         })
                     } catch (error) {
@@ -923,7 +921,6 @@
                     'id': id
                 }
             }).then((res) => {
-                console.log(res.data);
                 const link = res.data.data.google_maps_link;
                 document.querySelector('.facility-name').innerHTML = res.data.data.organisation_name;
                 document.querySelector('.facility-type').innerHTML = `${res.data.data.facility_type.charAt(0).toUpperCase() + res.data.data.facility_type.slice(1)} , ${res.data.data.city} , ${res.data.data.state} , ${res.data.data.country}`;
@@ -941,6 +938,43 @@
 
                 const directionsBtn = document.querySelector('.directions-btn');
                 const open24Hours = res.data.data.is_24_hours;
+ 
+
+                // Assuming `start_time` and `end_time` are in decimal form
+                const startTime = res.data.data.time_slots[0].start_time;
+                const endTime = res.data.data.time_slots[0].end_time;
+
+                // Function to convert decimal to time format
+                function convertDecimalToTime(decimalString) {
+                    let decimal = parseFloat(decimalString); // Convert string to number
+                    let totalMinutes = Math.round(decimal * 24 * 60); // Convert days to minutes
+                    let hours = Math.floor(totalMinutes / 60); // Extract hours
+                    let minutes = totalMinutes % 60; // Extract minutes
+                    let ampm = hours >= 12 ? "PM" : "AM"; // Determine AM or PM
+
+                    // Convert 24-hour format to 12-hour format
+                    hours = hours % 12 || 12;
+
+                    // Format time as HH:MM AM/PM
+                    return `${hours}:${minutes.toString().padStart(2, "0")} ${ampm}`;
+                }
+
+                // Convert `start_time` and `end_time` to time format
+                let openTime = convertDecimalToTime(startTime);
+                let closeTime = convertDecimalToTime(endTime);
+
+
+                if (startTime) {
+                    if (startTime === '-') {
+                      document.querySelector('.timing-box').innerHTML = `<p class="hours-24 mb-1">Open 24 Hours</p>`;
+                    }else{
+                     document.querySelector('.timing-box').innerHTML = `
+                    <p class="hours-normal mb-1">Opens ${openTime} - Closes ${openTime}</p>
+                `;
+                    }
+                }
+
+                // console.log(time_slots);
                 const facilityAE = res.data.data.facility_a_e;
 
                 if (open24Hours === 'yes') {
@@ -1127,14 +1161,11 @@
             // Newest click event
             sortNewest.addEventListener("click", function () {
                 sortLabel.innerHTML = `Sort by: <span style="font-weight: bold; color:black;">Newest</span>`;
-
-                console.log(sortLabel);
             });
 
             // Oldest click event
             sortOldest.addEventListener("click", function () {
                 sortLabel.innerHTML = `Sort by: <span style="font-weight: bold; color:black;">Oldest</span>`;
-                console.log(sortLabel);
             });
         });
 
