--- a/admin-dashboard/add-user.html
+++ b/admin-dashboard/add-user.html
@@ -687,6 +687,7 @@
                 name: formData.name,
                 email: formData.email,
                 password: formData.password,
+                role: formData.role
             };
 
             
