--- a/login.html
+++ b/login.html
@@ -165,6 +165,7 @@
 
   </footer>
   <!-- Footer end -->
+
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -197,7 +198,7 @@
           localStorage.setItem('role', response.data.user.role);
 
           if (response.data.user.role === 'super admin') {
-            window.location.href = "/admin-dashboard/users.html";
+            window.location.href = "/admin-dashboard/health-facilities.html";
           } else {
             window.location.href = "/";
           }
